--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<h1>WECOME TO MY ECOMMERCE SPRING AND ANGULAR</h1>
+
+<div class="py-5">
+   Navbar
+</div>
+
+<div>
+  <app-home></app-home>
+</div>
+
+<div class="py-5">
+  Footer
+</div>
