--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #0b0b0b;
+  color: #ffff;
+}
+.box{
+  box-shadow: #000000 0px 5px 15px;
+  padding: 15px;
+}
+.hideScrollbar::-webkit-scrollbar{
+  display: none;
+}
